# NVIDIA-Nemotron-Model-Reasoning-Challenge

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  ONBOARDING_CHECKLIST.md  README.md  pyproject.toml
configs/: exp001.yaml
docs/dev/: 2026-05-13-pre-run-audit.md  2026-05-15-submission-format-postmortem.md  HANDOFF-2026-05-13.md  HANDOFF-2026-05-14-research-summary.md  HANDOFF-2026-05-14.md  HANDOFF-2026-05-16.md
docs/discussion/: insights.md
docs/research/: 2026-05-13-day0-checklist.md  2026-05-13-mathematical-foundations.md  2026-05-14-codes-audit.md  2026-05-14-discussion-audit.md  2026-05-14-equation-dsl.md  2026-05-14-metric-deep-audit.md  2026-05-14-past-comp-winners.md  host_datasets.md  lb-observations.dense.md  lb-observations.kids.md  lb-snapshot-2026-05-13.csv  past-comps.dense.md  past-comps.kids.md  past-comps.references.json
docs/strategy/: codex-review-2026-05-13.md  exp001-design.md  first-principles.dense.md  first-principles.kids.md  winning-strategy.dense.md
notebooks/: 00_eda.ipynb  train_lora_colab.ipynb  train_lora_colab.py  train_lora_v1.py
src/nvidia_nemotron_model_reasoning_challenge/: __init__.py  colab_pipeline.py  cot_generator.py  data_io.py  solver_bit.py  solver_cipher.py  solver_physics.py  solver_roman.py  solver_symbol.py  solver_unit.py  submit.py  train_baseline.py  type_classifier.py
submissions/baseline_huikang/: inference.ipynb  inference.py  kernel-metadata.json
submissions/baseline_konbu17/: inference.ipynb  inference.py  kernel-metadata.json
submissions/diagnostic_attach/: inference.ipynb  inference.py  kernel-metadata.json
submissions/v1_inference/: inference.ipynb  inference.py  kernel-metadata.json
submissions/v1_sft/: kernel-metadata.json  train.ipynb
tests/: test_smoke.py  test_solver_symbol.py
tools/: post_training_submit.sh
(+19 files in other folders)
